--- a/modal/index.html
+++ b/modal/index.html
@@ -29,8 +29,8 @@
         <div class="hschool">HSchool</div>
         <input class="input_name" type="text" value="" placeholder="Full Name">
         <input class="input_email" type="text" value="" placeholder="Email">
-        <input class="input_password" type="text" value="" placeholder="Password">
-        <input class="input_confpassword" type="text" value="" placeholder="Confirm Password">
+        <input class="input_password" type="password" value="" placeholder="Password">
+        <input class="input_confpassword" type="password" value="" placeholder="Confirm Password">
         <button class="btn">Create Account</button>
         <p class="private_policy">By clicking “Create Account” you agree to our <b>terms</b> and <b>privacy policy.</b>
         </p>
