--- a/client/modal/index.html
+++ b/client/modal/index.html
@@ -35,6 +35,7 @@
         <p class="private_policy">By clicking “Create Account” you agree to our <b>terms</b> and <b>privacy policy.</b>
         </p>
     </div>
+    <p class="allUsers"></p>
     <script src="./app.js"></script>
 </body>
 
